baml_language/crates/baml_tests/snapshots/compiles/__assert_std__/baml_tests__compiles____assert_std____03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===

=== PPIR (package assert) ===

--- <builtin>/assert/assert.baml ---
function assert.approx_equal(actual: float, expected: float, eps: float) -> null  [expr] {
  {  } if (eps Lt 0.0 Or eps.is_nan()) {  } baml.sys.panic("assertion failed:...") else { let delta = actual Sub expected.abs() } if (delta.is_nan() Or delta Gt eps) {  } baml.sys.panic("assertion failed:..." Add format_operand(delta) Add ", eps = " Add format_operand(eps) Add ", left = " Add format_operand(actual) Add ", right = " Add format_operand(expected)) else {  } null
}
function assert.contains(haystack: string, needle: string) -> null  [expr] {
  {  } if (Not haystack.includes(needle)) {  } baml.sys.panic("assertion failed:...") else {  } null
}
function assert.equal(actual: unknown, expected: unknown) -> null  [expr] {
  {  } if (actual Ne expected) {  } baml.sys.panic("assertion failed:..." Add format_operand(actual) Add ", right = " Add format_operand(expected)) else {  } null
}
function assert.format_operand(value: unknown) -> string  [expr] {
  {  } string.from(value)
}
function assert.is_true(condition: bool) -> null  [expr] {
  {  } if (Not condition) {  } baml.sys.panic("assertion failed:...") else {  } null
}
function assert.not_null(value: unknown?) -> null  [expr] {
  {  } if (value Eq null) {  } baml.sys.panic("assertion failed:...") else {  } null
}
