baml_language/crates/baml_tests/snapshots/compiles/__assert_std__/baml_tests__compiles____assert_std____04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===

=== MIR2 (package assert) ===
fn assert.contains(haystack: string, needle: string) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: string // haystack // param
    let _2: string // needle // param
    let _3: bool
    let _4: bool

    bb0: {
        _4 = call const fn baml.String.includes(copy _1, copy _2) -> [bb1];
    }

    bb1: {
        _3 = !copy _4;
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb4;
    }

    bb3: {
        _0 = call const fn baml.sys.panic(const "assertion failed: string does not contain expected substring") -> [bb4];
    }

    bb4: {
        return;
    }
}

fn assert.equal(actual: unknown, expected: unknown) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: unknown // actual // param
    let _2: unknown // expected // param
    let _3: bool
    let _4: bool
    let _5: string
    let _6: string
    let _7: string
    let _8: string
    let _9: string

    bb0: {
        _4 = call const fn baml.ops.equals_equals(copy _1, copy _2) -> [bb1];
    }

    bb1: {
        _3 = !copy _4;
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb6;
    }

    bb3: {
        _8 = call const fn assert.format_operand(copy _1) -> [bb4];
    }

    bb4: {
        _7 = const "assertion failed: left = " + copy _8;
        _6 = copy _7 + const ", right = ";
        _9 = call const fn assert.format_operand(copy _2) -> [bb5];
    }

    bb5: {
        _5 = copy _6 + copy _9;
        _0 = call const fn baml.sys.panic(copy _5) -> [bb6];
    }

    bb6: {
        return;
    }
}

fn assert.format_operand(value: unknown) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: unknown // value // param

    bb0: {
        _0 = call const fn baml.String.from(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn assert.is_true(condition: bool) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: bool // condition // param
    let _2: bool

    bb0: {
        _2 = !copy _1;
        branch copy _2 -> [bb2, bb1];
    }

    bb1: {
        _0 = const null;
        goto -> bb3;
    }

    bb2: {
        _0 = call const fn baml.sys.panic(const "assertion failed: expected true") -> [bb3];
    }

    bb3: {
        return;
    }
}

fn assert.not_null(value: unknown | null) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: unknown | null // value // param
    let _2: bool

    bb0: {
        _2 = call const fn baml.ops.equals_equals(copy _1, const null) -> [bb1];
    }

    bb1: {
        branch copy _2 -> [bb3, bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb4;
    }

    bb3: {
        _0 = call const fn baml.sys.panic(const "assertion failed: expected non-null value") -> [bb4];
    }

    bb4: {
        return;
    }
}
