baml_language/crates/baml_tests/snapshots/compiles/__assert_std__/baml_tests__compiles____assert_std____04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===

=== TIR2 (package assert) ===

--- <builtin>/assert/assert.baml ---
function assert.is_true(condition: bool) -> null throws never {
  { : null
    if (Not condition : bool) : null
      { : never
        baml.sys.panic("assertion failed:...") : never
      }
    else
      { : null
        null : null
      }
  }
}
function assert.not_null(value: unknown | null) -> null throws never {
  { : null
    if (value == null : bool) : null
      { : never
        baml.sys.panic("assertion failed:...") : never
      }
    else
      { : null
        null : null
      }
  }
}
function assert.format_operand(value: unknown) -> string throws never {
  { : string
    string.from<T>(value) : string
  }
}
function assert.equal(actual: unknown, expected: unknown) -> null throws never {
  { : null
    if (actual != expected : bool) : null
      { : never
        baml.sys.panic("assertion failed:..." + format_operand(actual) + ", right = " + format_operand(expected)) : never
      }
    else
      { : null
        null : null
      }
  }
}
function assert.approx_equal(actual: float, expected: float, eps: float) -> null throws never {
  { : null
    if (eps < 0.0 || eps.is_nan() : bool) : null
      { : never
        baml.sys.panic("assertion failed:...") : never
      }
    else
      { : null
        let delta = actual - expected.abs() : float
        if (delta.is_nan() || delta > eps : bool) : null
          { : never
            baml.sys.panic("assertion failed:..." + format_operand(delta) + ", eps = " + format_operand(eps) + ", left = " + format_operand(actual) + ", right = " + format_operand(expected)) : never
          }
        else
          { : null
            null : null
          }
      }
  }
}
function assert.contains(haystack: string, needle: string) -> null throws never {
  { : null
    if (Not haystack.includes(needle) : bool) : null
      { : never
        baml.sys.panic("assertion failed:...") : never
      }
    else
      { : null
        null : null
      }
  }
}
