baml_language/crates/baml_tests/snapshots/compiles/__assert_std__/baml_tests__compiles____assert_std____05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 3594
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
